# Paper4PrintBackend

./: DockerFile  README.md  docker-compose.yml  pyproject.toml
loki/: retention-config.yaml
paper4backend/: manage.py
paper4backend/paper4auth/: admin.py  apps.py  models.py
paper4backend/paper4auth/migrations/: 0001_initial.py
paper4backend/paper4backend/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
paper4backend/rmq_handlers/: apps.py  base_rmq.py  urls.py  utils.py  validators.py  views.py
paper4backend/rmq_handlers/management/commands/: auth_consume.py  consume.py  payment_consume.py
paper4backend/shop/: admin.py  choices.py  filters.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
paper4backend/shop/migrations/: 0001_initial.py  0002_productimage.py  0003_products.py  0004_productimage_product.py  0005_producttoorder.py  0006_tags.py  0007_products_tags.py  0008_payment.py  0009_remove_payment_id_alter_payment_uuid.py  0010_alter_payment_order.py  0011_payment_currency.py  0012_payment_description_payment_name.py
