[project]
name = "paper4printbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.43",
    "django>=5.2.3",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.0",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "uwsgi>=2.0.30",
]
